submissions/490893b2c62e4b2ab01cb1ac7c2e3f70/result.txt
Compile Error:/usr/src/main.cpp:1:1: error: 'rsgd' does not name a type
    1 | rsgd
      | ^~~~
